# pylhemus

./: .gitignore  AGENTS.md  FASTRAK_commands.md  README.md  default_settings.json  plh_settings.json  pyproject.toml
docs/: README.md  _config.yml  commands.md  index.md  settings.md
docs/digitising/: index.md  polhemus_digitisation.md
docs/reference/: fastrak_commands.md
pylhemus/: __init__.pyi  cli.py  default_settings.json  gui.py  read_data.py  read_settings.py  settings.py  settings_loader.py  talk.py
pylhemus/digitise/: __init__.py  __init__.pyi  controller.py  dev_connector.py  fastrak_connector.py  pyvista_gui.py
pylhemus/template/: EEG_layout.py  __init__.pyi  registry.py  template_base.py
